# console-template

./: Cargo.toml
app/: Cargo.toml
app/src/commands/: foo.rs  mod.rs
bootstrap/: Cargo.toml
bootstrap/src/: lib.rs
